@@ -45,7 +45,6 @@
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
         <maven.javadoc.skip>true</maven.javadoc.skip>
         <maven.site.skip>false</maven.site.skip>
-        <maven.compiler.optimize>true</maven.compiler.optimize>
         <maven.compiler.fork>true</maven.compiler.fork>
         <maven.compiler.verbose>true</maven.compiler.verbose>
         <maven.compiler.debug>true</maven.compiler.debug>
@@ -373,7 +372,6 @@
                     <testFailureIgnore>false</testFailureIgnore>
                     <forkMode>pertest</forkMode>
                     <useSystemClassLoader>false</useSystemClassLoader>
-                    <argLine>--illegal-access=permit</argLine>
 					<forkCount>1</forkCount>
 					<reuseForks>true</reuseForks>
 				</configuration>
@@ -438,11 +436,9 @@
 				<!--https://www.owasp.org/index.php/Top_10_2013-A9-Using_Components_with_Known_Vulnerabilities-->
 				<groupId>org.owasp</groupId>
 				<artifactId>dependency-check-maven</artifactId>
-				<version>3.3.1</version>
-				<!-- in build/plugins -->
+				<version>10.0.3</version>
 				<configuration>
 					<failBuildOnCVSS>8</failBuildOnCVSS>
-					<externalReport>false</externalReport>
                     <suppressionFiles>
                         <suppressionFile>owasp-ignore.xml</suppressionFile>
                     </suppressionFiles>
@@ -483,7 +479,6 @@
                     </rulesets>
 					<!--<targetjdk>${targetJdk}</targetjdk>-->
 					<format>xml</format>
-					<linkXref>true</linkXref>
 					<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
 					<minimumTokens>100</minimumTokens>
 				</configuration>
@@ -497,9 +492,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>2.22.0</version>
-				<configuration>
-					<testFailureIgnore>true</testFailureIgnore>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -524,7 +516,6 @@
 				<version>2.4</version>
 				<configuration>
 					<multipleLineComments>true</multipleLineComments>
-					<sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
 					<tags>
 						<tag>TODO</tag>
 						<tag>FIXME</tag>
